--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       <h1>Weather Web</h1>
     </div>
 
+    <div class="weather-info">
+      <div class="city-country"></div>
+      <div class="temp-icon-desc">
+        <div class="temp-icon"></div>
+        <div class="description"></div>
+      </div>
+      <div class="extra-info"></div>
+    </div>
   </div>
 </body>
 </html>
