--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   <title>Weather Web</title>
 </head>
 <body>
+  <div class="title">
+    <h1>Weather Web</h1>
+  </div>
   <div class="container">
-    <div class="title">
-      <h1>Weather Web</h1>
-    </div>
+    <form action="post">
+      <div class="inputs">
+        <input type="text" class="input city" placeholder="city">
+        <input type="text" class="input country" placeholder="country">
+      </div>
+      <button type="submmit">Submit</button>
+    </form>
 
     <div class="weather-info">
       <div class="city-country"></div>
