--- a/index.html
+++ b/index.html
@@ -11,21 +11,16 @@
     <h1>Weather Web</h1>
   </div>
   <div class="container">
-    <form action="post">
-      <div class="inputs">
-        <input type="text" class="input city" placeholder="city">
-        <input type="text" class="input country" placeholder="country">
-      </div>
-      <button type="submmit">Submit</button>
-    </form>
-
     <div class="weather-info">
       <div class="city-country"></div>
       <div class="temp-icon-desc">
         <div class="temp-icon"></div>
+        <div class="weather"></div>
         <div class="description"></div>
       </div>
-      <div class="extra-info"></div>
+      <div class="extra-info">
+        <img src="./images/cloud.png" alt="">
+      </div>
     </div>
   </div>
 </body>
