creating html weather in js

--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
     <h1>Weather Web</h1>
   </div>
   <div class="container">
-    <div class="weather-info">
-      <div class="city-country"></div>
-      <div class="temp-icon-desc">
-        <div class="temp-icon"></div>
-        <div class="weather"></div>
-        <div class="description"></div>
-      </div>
-      <div class="extra-info">
-      </div>
-    </div>
+    <div class="weather-info"></div>
   </div>
 </body>
 </html>
