information extra humidity and speed wind

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Weather Web</h1>
   </div>
   <div class="container">
-    <div class="weather-info"></div>
+    <div class="weather-info">
+    </div>
   </div>
 </body>
 </html>
