add input with font icon

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
   <title>Weather Web</title>
 </head>
 <body>
-  <div class="title">
-    <h1>Weather Web</h1>
-  </div>
   <div class="container">
+    <div class="search">
+      <span class="icon"><i class="fas fa-search"></i></span>
+      <input type="text" class="input-search" placeholder="London,GB">
+    </div>
     <div class="weather-info">
     </div>
   </div>
