--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="search">
       <span class="icon"><i class="fas fa-search"></i></span>
-      <input type="text" class="input-search" placeholder="London,GB">
+      <input type="text" class="input-search" placeholder="">
     </div>
     <div class="weather-info">
     </div>
