--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
   <div class="container">
     <div class="search">
-      <span class="icon"><i class="fas fa-search"></i></span>
-      <input type="text" class="input-search" placeholder="">
+      <div class="input">
+        <span class="icon"><i class="fas fa-search"></i></span>
+        <input type="text" class="input-search" placeholder="">
+      </div>
     </div>
     <div class="weather-info">
     </div>
